# Projects

./: .gitignore
Artist Portfolio Platform/: BlogSection.js  ComissionRequest.js  CustomAnimations.js  EventCalender.js  Gallery.js  biography.js  styles.css
BankBuddyAI/: README.md
CodeGuardian/: README.md  requirements.txt
Community Forum/: README.md  package.json  tailwind.config.js
Cybersecurity Incident Response & Risk Management System/: Filebeat.txt  MiddleWare.py  aws_client.py  compliance.py  ecs.tf  models.py  scanner.py  signals.py  test_incident_handling.py  thirdparty_risk_models.py
DocuVaultChain/: README.md
EscroSmart/: README.md
FraudShield AI/: README.md
IT Asset Inventory & Compliance Automation Tool/: ComplianceHeatmap.jsx  __init__.py  asset_test.py  assets.py  azure.py  checks.py  ecycle.py  main.tf  (+4 more)
PracticeOps/apps/api/: Dockerfile  Dockerfile.prod  RAILWAY_SETUP.md  alembic.ini  entrypoint.sh  pyproject.toml  railway.toml
PracticeOps/apps/api/alembic/: env.py
PracticeOps/apps/api/alembic/versions/: 001_initial_schema.py  002_add_invite_email.py  003_add_assignment_fields.py  004_add_practice_log_fields.py  005_add_ticket_claimable.py  006_add_ticket_workflow_fields.py  007_extend_notification_preferences.py
PracticeOps/apps/api/app/: __init__.py  config.py  database.py  main.py
PracticeOps/apps/api/app/core/: __init__.py  deps.py  errors.py  logging.py  middleware.py  security.py
PracticeOps/apps/api/app/models/: __init__.py  enums.py  tables.py
PracticeOps/apps/api/app/routes/: admin.py  assignments.py  auth.py  cycles.py  dashboards.py  health.py  invites.py  notification_preferences.py  practice_logs.py  teams.py  tickets.py
PracticeOps/apps/api/app/schemas/: __init__.py  assignments.py  auth.py  cycles.py  dashboards.py  notification_preferences.py  practice_logs.py  teams.py  tickets.py
PracticeOps/apps/api/app/services/: __init__.py  email.py  openai_summary.py  scheduler.py
PracticeOps/apps/api/scripts/: seed.py  seed_demo.py
PracticeOps/apps/api/tests/: __init__.py  conftest.py  test_assignments.py  test_auth.py  test_compliance_insights.py  test_cycles.py  test_dashboards.py  test_db_constraints.py  test_demo_guardrails.py  test_hardening.py  test_health.py  test_notifications.py  test_openai_summary.py  test_practice_logs.py  test_teams.py  test_ticket_transitions.py  test_tickets.py
(+729 files in other folders)
